# lab4

./: CMakeLists.txt  Makefile  cmake_install.cmake  solver
.github/workflows/: main.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/formatter_ex/: Makefile  cmake_install.cmake
_build/formatter_ex/formatter_lib/: Makefile
formatter_ex/: Makefile  cmake_install.cmake
formatter_ex/formatter_lib/: Makefile
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/_build/formatter_lib/: Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world
hello_world_application/_build/formatter_ex/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex/formatter_lib/: Makefile
workflows/: main.yml
